--- a/config-data/event-service.yml
+++ b/config-data/event-service.yml
@@ -1,3 +1,10 @@
+server:
+  port: 8091
+  error:
+    include-message: always
+    include-binding-errors: always
+    include-stacktrace: never
+
 spring:
   data:
     mongodb:
@@ -6,7 +13,3 @@ spring:
     serialization:
       write-dates-as-timestamps: false
   date-format: java.txt.SimpleDateFormat
-
-server:
-  error:
-    include-stacktrace: never
