--- a/config-data/user-service.yml
+++ b/config-data/user-service.yml
@@ -1,3 +1,10 @@
+server:
+  port: 8092
+  error:
+    include-message: always
+    include-binding-errors: always
+    include-stack: never
+
 spring:
   datasource:
     url: jdbc:mysql://sql11.freemysqlhosting.net:3306/sql11437168
@@ -15,29 +22,3 @@ spring:
   jackson:
     serialization:
       FAIL_ON_EMPTY: false
-
-server:
-  error:
-    include-stack: never
-#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-#server.error.include-stacktrace=never
-## ===============================
-## = DATA SOURCE
-## ===============================
-#spring.datasource.url= jdbc:mysql://sql11.freemysqlhosting.net:3306/sql11437168
-#spring.datasource.username= sql11437168
-#spring.datasource.password=GPBFf8F3vg
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql= true
-
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-##spring.jpa.properties.hibernate.format_sql=true
-## ===============================
-## = INFORMACION ADICIONAL
-## ===============================
-#
-##Permite conocer los endpoints
-#logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
-#
-
-#
