Update Order config

--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -6,12 +6,11 @@ spring:
     config:
       server:
         git:
-
           uri: https://github.com/ruedaFerrero/LucaMusicV2.git
           searchPaths: config-data
           username: ${GIT_USER}
           password: ${GIT_PASSWORD}
-          default-label: main
+          default-label: order-service
   security:
     user:
       name: root
