--- a/config-data/order-service.yml
+++ b/config-data/order-service.yml
@@ -12,3 +12,17 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8099/eureka/
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/orders
+    username: root
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        format-sql: true
