--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -1,8 +1,11 @@
+jwt:
+  secret: lucamusic
+  jwtExpirationInMs: 18000000
 spring:
   application:
     name: user-service
   cloud:
     config:
-      uri: http://localhost:8081
+      uri: http://localhost:8082
       username: root
       password: s3cr3t
