--- a/config-data/user-service.yml
+++ b/config-data/user-service.yml
@@ -8,13 +8,19 @@ jwt:
   secret: lucamusic
   jwtExpirationInMs: 18000000
 spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        dialect: org.hibernate.dialect.H2Dialect
         format-sql: true
 eureka:
   client:
