--- a/config-data/event-service.yml
+++ b/config-data/event-service.yml
@@ -4,7 +4,9 @@ server:
     include-message: always
     include-binding-errors: always
     include-stacktrace: never
-
+jwt:
+  secret: lucamusic
+  jwtExpirationInMs: 18000000
 spring:
   data:
     mongodb:
